--- a/index2.html
+++ b/index2.html
@@ -13,6 +13,6 @@
     <h4>heading 4</h4>
     <h5>heading 5</h5>
     <h6>heading 6</h6>
-    <p>This is a new feature (button)</p>
+    <p>This is a new feature (dropdown)</p>
 </body>
 </html>
